--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 attribute vec4 vPosition;
 attribute vec4 vColor;
 
-varying mediump vec4 fColor;
+varying lowp vec4 fColor;
 
 void main()
 {
@@ -20,9 +20,9 @@ void main()
 </script>
 
 <script id="fragment-shader" type="x-shader/x-fragment">
-precision mediump float;
+precision lowp float;
 
-varying mediump vec4 fColor;
+varying lowp vec4 fColor;
 
 void main()
 {
