--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@ void main()
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
             <div class="modal-body small">
-                <p>To draw shapes, click on one of the shape buttons, for polygons, you can input the number of sides you want from "Polygon Sides". All shapes will be rendered in the middle of the canvas with the color grey.</p>
-                <p>To move control points, select "Move & Drag", drag the control points of the shape to be moved.</p>
-                <p>To change shape color, select "Change Color", pick the color you want from "Select Color", then click on one of the control points.</p>
-                <p>To export/save, click on the "Export" button, "shapes.json" will be downloaded.</p>
-                <p>To import/load, click on the "Import" button, choose a ".json" file you have exported before.</p>
-                <p>To hide control points, move your cursor out of the canvas area.</p>
+                <p>To draw shapes, click on one of the shape buttons, for polygons, you can input the number of sides you want from "Polygon Sides". All shapes will initially be drawn in the middle of the canvas with the color grey.</p>
+                <p>To move control points, select "Move & Drag", drag the control points of the shape you want to move.</p>
+                <p>To change a shape's color, select "Change Color", pick the color you want from "Select Color", then click on one of the control points of the shape you want to recolor.</p>
+                <p>To export/save, click on the "Export" button below the canvas, a ".json" file will be downloaded.</p>
+                <p>To import/load, click on the "Import" button below the canvas, choose a ".json" file you have exported before.</p>
+                <p>To show/hide control points, move your cursor in/out of the canvas area.</p>
             </div>
         </div>
         
